--- a/exhibition/src/App.css
+++ b/exhibition/src/App.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
     color: white;
 }
 
@@ -15,8 +14,7 @@
     background-color: antiquewhite;
     border-radius: 30px;
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: repeat(auto-fit, 400px);
     gap: 30px;
     padding: 30px;
 }
