--- a/exhibition/src/components/ControlDisplay/ControlDisplay.css
+++ b/exhibition/src/components/ControlDisplay/ControlDisplay.css
@@ -1,54 +1,54 @@
+:root {
+    --control-width: 80%;
+}
+
 h4 {
-  color: green;
+    color: green;
 }
 
 .slider {
-  -webkit-appearance: none;
-  width: 50%;
-  height: 15px;
-  border-radius: 7px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
+    -webkit-appearance: none;
+    width: var(--control-width);
+    height: 15px;
+    border-radius: 7px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
 }
 
 .slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #4caf50;
-  cursor: pointer;
-  content: icon;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4caf50;
+    cursor: pointer;
+    content: icon;
 }
 
 .slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: black;
-  cursor: pointer;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: black;
+    cursor: pointer;
 }
 
 .btns {
-  background-color: grey;
-  border-radius: 5px;
-  width: 20%;
-  min-height: 40px;
-  border-color: coral;
-  margin: auto;
+    width: 150px;
+    padding: 10px;
+    border-radius: 50px;
 }
 
 #controlContainer {
-  width: 50%;
-  height: 20%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
 }
 
 /*
@@ -58,28 +58,20 @@ Velge poetry
 */
 
 .sliderContainer {
-  width: 100%;
-  margin-bottom: 50px;
-  font-size: 80%;
+    width: 100%;
+    font-size: 80%;
+    text-align: center;
 }
 
 p {
-  margin: 0;
-  font: 40;
-}
-
-#ColorTheme {
-  margin-top: 100px;
+    margin: 0;
 }
 
 ul {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 50%;
-  align-items: center;
-  margin: auto;
-  float: center;
-  padding: 10px;
+    margin: 0 auto;
+    width: var(--control-width);
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
 }
