--- a/exhibition/src/components/ControlDisplay/ControlDisplay.css
+++ b/exhibition/src/components/ControlDisplay/ControlDisplay.css
@@ -11,7 +11,7 @@ h4 {
     width: var(--control-width);
     height: 15px;
     border-radius: 7px;
-    background: #d3d3d3;
+    background: white;
     outline: none;
     opacity: 0.7;
     -webkit-transition: 0.2s;
@@ -37,18 +37,18 @@ h4 {
     cursor: pointer;
 }
 
-.btns {
-    width: 150px;
-    padding: 10px;
-    border-radius: 50px;
-}
-
 #controlContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 100%;
+    height: 90%;
+}
+
+#favButtons {
+    width: var(--control-width);
+    display: flex;
+    justify-content: space-between;
 }
 
 /*
