--- a/exhibition/src/components/ArtDisplay/ArtDisplay.css
+++ b/exhibition/src/components/ArtDisplay/ArtDisplay.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+#artContainer svg {
+    border: 10px solid black;
+}
+
 #buttonsContainer {
     display: flex;
     justify-content: space-around;
