--- a/exhibition/src/components/FrontPage/FrontPage.css
+++ b/exhibition/src/components/FrontPage/FrontPage.css
@@ -1,5 +1,5 @@
 #frontPage {
-    background-color: lightblue;
+    background-color: #282c34;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -8,6 +8,8 @@
     right: 0;
     bottom: 0;
     z-index: 1;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #container {
@@ -15,46 +17,46 @@
     display: flex;
     justify-content: space-between;
     margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     flex-wrap: wrap;
+    margin: 0 auto;
+    gap: 10px;
 }
 
-#container > img {
+/* #container > img {
     width: 300px;
     height: 200px;
     padding-right: 30px;
+} */
+
+#imgContainer {
+    width: 35%;
+    min-width: 250px;
 }
 
-#container > div {
+#imgContainer > img {
+    width: 100%;
+}
+
+#textContainer {
     width: 60%;
-    min-width: 300px;
+    min-width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 #introText {
-    padding-top: 30px;
     font-size: 1.5em;
-    margin: 0;
-    padding-bottom: 50px;
+    color: white;
 }
 
 #introText > span {
     font-weight: bold;
 }
 
-#startButton {
-    position: absolute;
-    bottom: 0;
-    width: 200px;
-    font-size: 1.2em;
-    padding: 10px 20px;
-    border-radius: 25px;
-}
-
 .showing {
-    display: block;
+    display: flex;
 }
 
 .hiding {
