Added poems and audiofiles specific for artworks. Updates #14

--- a/exhibition/src/components/PoetryDisplay/PoetryDisplay.css
+++ b/exhibition/src/components/PoetryDisplay/PoetryDisplay.css
@@ -1,3 +1,13 @@
 div {
     color: black;
 }
+
+.bold {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.cursive {
+    font-style: italic;
+    font-size: 1.2em;
+}
